# cloudflare-ddns-rust

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.linux  README.md  windows.dockerfile
.cargo/: config.toml
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
.idx/: dev.nix
docs/: README.md  _sidebar.md  cli_docs.md  config.md  index.html  roadmap.md
docs/install/: bin.md  docker.md  run_from_src.md
src/: initialize.rs  install.rs  load_conf.rs  main.rs  obj.rs  parse_args.rs  run.rs  uninstall.rs  update_ip.rs
src/initialize/: load_conf.rs  parse_args.rs
src/run/: load_conf.rs  mod.rs  update_ip.rs
src/setup/: uninstall.rs
