[package]
name = "ddns_rust"
version = "0.2.0"
edition = "2024"

[dependencies]
futures = "*"
reqwest = { version = "*", default-features = false, features = [
    "json",
    "gzip",
    "http2",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "parking_lot",
] }
clap = { version = "*", features = ["derive"] }
ctrlc = { version = "*", features = ["termination"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
flexi_logger = { version = "*", features = ["async", "compress", "colors"] }
log = "*"
parking_lot = "*"

[target.'cfg(target_env = "musl")'.dependencies]
reqwest = { version = "*", default-features = false, features = ["rustls-tls"] }
mimalloc = { version = "0.1", features = ["v3"] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
reqwest = { version = "*", default-features = false, features = [
    "native-tls",
    "native-tls-alpn",
] }

[target.'cfg(windows)'.dependencies]
windows-services = "*"


[profile.release]
strip = true             # 自动从二进制文件去除符号信息.
opt-level = "s"          #  二进制文件大小优化
codegen-units = 1
lto = "fat"              # 完全 LTO（编译慢但性能更好）
panic = "abort"
overflow-checks = false  # 禁用整数溢出检查（提升速度，需确保安全）
debug = false            # 禁用调试符号（减小体积）
debug-assertions = false # 是否启用 debug-assertions（在 release 中通常关闭，以避免额外检查开销）
incremental = false      # 关闭增量编译，减少内存占用

# 为所有依赖也强制设置 opt-level
[profile.release.package."*"]
opt-level = "s"
